Previous overflow fix of pages with lightboxes caused the nav bar not to stick to the top of the page; both issues should be fixed now.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,8 @@ body {
   -webkit-font-smoothing: antialiased;
   position: relative;
   /* Ensure psuedo-element positions relative to body */
-  overflow-x: hidden;
+  width: 100%;
+  overflow-x: clip;
 }
 
 /* Dotted background using pseudo-element to fade out */
